[package]
name = "yuki-rust-transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bincode = "1.3.3"
serde =  {version = "1.0.142" ,features = ["derive"]}
serde_bytes = "0.11.7"
rust-crypto = "0.2.36"
